--- a/src/components/Quote/Quote.scss
+++ b/src/components/Quote/Quote.scss
@@ -1,13 +1,22 @@
 @import "../../styles/z-index-util.scss";
 
 .quote-container {
-  background-color: turquoise;
-  position: relative;
+  background: url('../../img/ocean.jpg') no-repeat bottom / cover;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
   z-index: z(quote);
-  padding: 100px 0;
 
   &__quote {
     display: flex;
     align-items: center;
+
+    &__text {
+      font-size: 24px;
+    }
   }
 }
