--- a/src/components/Quote/Quote.scss
+++ b/src/components/Quote/Quote.scss
@@ -16,7 +16,13 @@
     align-items: center;
 
     &__text {
-      font-size: 24px;
+      font-size: 20px;
     }
+  }
+
+  &__footer {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
   }
 }
